spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-discoveryclient-it/src/test/resources/client/spring-cloud-kubernetes-discoveryclient-it-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-discoveryclient-it-deployment
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-discoveryclient-it
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-discoveryclient-it
    spec:
      serviceAccountName: spring-cloud-kubernetes-serviceaccount
      containers:
        - name: spring-cloud-kubernetes-discoveryclient-it
          image: docker.io/springcloud/spring-cloud-kubernetes-discoveryclient-it
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /discoveryclient-it/actuator/health/readiness
            initialDelaySeconds: 10
            periodSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              port: 8080
              path: /discoveryclient-it/actuator/health/liveness
            initialDelaySeconds: 10
            periodSeconds: 2
            failureThreshold: 3
          ports:
            - containerPort: 8080
